Menu push changes (#171)